fixed contactbody's css(scrollbar's css was giving problem)

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   max-width: 50%;
   margin-right: auto;
   margin-left: auto;
-  /* gap: 0.3rem; */
+  gap: 0.3rem;
 }
 
 .contact-body {
@@ -23,14 +23,16 @@
   max-width: 50%;
   border-radius: 5px;
   margin: auto;
-  margin-top: 0.1rem;
-  margin-bottom: .1rem;
+  /* margin-top: 0.1rem; */
+  /* margin-bottom: .1rem; */
   color: var(--text-color);
   font-size: 1.8rem;
   padding: 0.1rem 2rem;
   cursor: pointer;
   justify-content: space-between;
   transition: all 0.2s ease;
+  overflow: hidden;
+  scrollbar-width: none;
 }
 
 .contact-body:hover {
@@ -215,7 +217,7 @@ option:hover {
   .contact-body {
     height: 3rem;
     font-size: 1.2rem;
-    padding: 0.5em 1rem;
+    padding: 0.3rem 1rem;
     width: 390px;
     overflow-x: scroll;
   }
